# vxl_2

./: .gitignore  Cargo.toml  build.rs
res/shaders/test/: tf.glsl  triangle_fragment.glsl  triangle_vertex.glsl  tv.glsl
src/: main.rs
src/component/: camera.rs  mesh_data.rs  mod.rs  renderer.rs  transform.rs
src/engine/: input_handler.rs  mod.rs
src/engine/entity/: mod.rs
src/engine/graphics/: mod.rs  shader.rs  shader_program.rs
src/engine/resource/: loader.rs  manager.rs
src/engine/utils/: mod.rs
src/esc_res/: delta_time.rs  mod.rs  user_input.rs
src/resource/: loader.rs  manager.rs  mod.rs  shader.rs  shader_program.rs  texture.rs
src/system/: cam_control.rs  mod.rs  test.rs  triangle.rs
src/utils/: funcs.rs
src/vxl/: clock.rs  input.rs  mod.rs  window.rs
